Changed api contracts. Improved caching.  Added interceptor,
Changed a lot of api contracts because returning lists is bad for scalability. Improved caching of paths to static files.  Added interceptor for knowing when users where last active.